# ColourQuantization

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  gmon.out  image_slurm.sh  main  makefile  mountain_VECTOR3D_version_noOpenMP.txt  mountain_VECTOR3D_version_openMP.txt  mountain_VECTOR3D_version_openMP_tagPixels.txt  profile.txt  serial.txt  serial_mountain_nomp.txt  serial_mountain_nomp_03.txt  serial_mountain_openmp.txt  slurm-100027.out  slurm-100037.out  slurm-100046.out  slurm-100061.out  slurm-100062.out  slurm-100063.out  slurm-98524.out  slurm-98528.out  slurm-98533.out  slurm-98538.out  slurm-98547.out  slurm-99518.out  slurm-99520.out  slurm-99522.out  slurm-99536.out  slurm-99542.out  slurm-99546.out  slurm-99563.out  slurm-99565.out  slurm-99580.out  slurm-99582.out  slurm-99583.out  slurm-99584.out  (+25 more)
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/ColourQuantization/: main.hpp
src/: CMakeLists.txt  main  main.cpp  main.h  write.cpp
